# ScoreHive

./: .dockerignore  .gitignore  1000-exams.json  CMakeLists.txt  README-Docker.md  SETUP-FROM-SCRATCH.md  debug-simple.sh  docker-compose.full.yml  random-answers.json  run.sh  run_build.sh  run_info.sh  run_server.sh  run_worker.sh  test-commands.sh  test-single-exam.sh
adapter/: .gitignore  Dockerfile  README.md  adapter.js  create-request-table.sql  package-lock.json  package.json  test-compatibility.js  test_conversion.js  tsconfig.json
adapter/src/: app.ts  server.ts  supabaseClient.ts
adapter/src/controllers/: AnswerController.ts  AreaController.ts  ExamController.ts  ProcessController.ts
adapter/src/repositories/: AnswerRepository.ts  AreaRepository.ts  ProcessRepository.ts  RequestRepository.ts
adapter/src/routes/: answerRoutes.ts  areaRoutes.ts  examRoutes.ts  processRoutes.ts
adapter/src/services/: AnswerRepository.ts  ExamService.ts  SHProtocolService.ts
adapter/src/system/: pool.ts  protocol.ts
adapter/src/types/: index.ts
cluster/: CMakeLists.txt  Dockerfile  docker-compose.yaml  hostfile  mpi-job.yaml
cluster/source/: main.cpp
cluster/source/database/: database.cpp  database.hpp
cluster/source/domain/: answers.cpp  answers.hpp  coordinator.cpp  coordinator.hpp  evaluator.cpp
cluster/source/server/: protocol.hpp  server.cpp  server.hpp  watcher.cpp  watcher.hpp
database/: functions.sql  populate_areas.sql  scheme.sql
dispatcher/: CMakeLists.txt  aliases.hpp  dispatcher.cpp  dispatcher.hpp
dispatcher/client/: client.cpp
dispatcher/pool/: pool.cpp  pool.hpp
dispatcher/system/: logger.hpp
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/answers/: page.tsx
frontend/src/app/exams/: page.tsx
k8s/: README.md  adapter-deployment.yaml  deploy.sh  deployment.yaml  gke-cluster.yaml  mpi-operator.yaml  mpijob.yaml  namespace.yaml  secrets.yaml  service.yaml
scripts/: generate-1000-exams.js  generate-random-answers.js
source/: aliases.hpp  main.cpp
source/actors/: worker.cpp  worker.hpp
source/client/: client.hpp
source/server/: server.cpp  server.hpp
source/system/: environment.cpp  logger.hpp  shutdown.hpp  spdlog_wrapper.hpp
tests/: CMakeLists.txt  pool.test.cpp
worker/: CMakeLists.txt  worker.cpp
worker/server/: server.hpp
worker/system/: environment.hpp
